--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "beautify": "npm run lint -- --fix",
     "ci": "npm run lint && npm run test",
     "cover": "nyc report --reporter=text-lcov > coverage.lcov && codecov --token=$WS_CODECOV_TOKEN",
+    "cover:report": "nyc report --reporter=html",
     "lint": "eslint index.js cli.js bin lib test examples",
     "mocha": "mocha --require intelli-espower-loader test/test.js --full-trace --check-leaks --exit",
     "test": "nyc npm run mocha"
